# c_compiler

./: README.md  compiler_test.c  meson.build
Documentation/: paper.tex  spec.tex
include/c_compiler/: ast.h  cg.h
src/: ast.c  c.l  c.y  cg.c  main.c
subprojects/: ds
test/: bf_interp.c  compiler_test.c  pointers.c  scopes.c  sizeof.c  syntax.c
test/error/: add_non_arith.c  add_ptr.c  addressof_lvalue.c  deref_non_ptr.c  inc_lvalue.c  sub_ptr.c
test/syntax/: declarators.c
